Revert "Achievement Notifications (#168)" (#170)
This reverts commit 46b4bf3835ff35ff65e3ab7adf1311a93b6dd17e.